# platform.external.toolchain-utils

./: .gitignore  .style.yapf  COMMIT-QUEUE.ini  LICENSE  METADATA  OWNERS  OWNERS.android  OWNERS.toolchain  PRESUBMIT.cfg  README.chromium  README.md  READONLY  afe_lock_machine.py  android_merge_from_upstream.sh  auto_abandon_cls.py  auto_delete_nightly_test_data.py  bootstrap_compiler.py  build_benchmarks.py  build_chrome_browser.py  build_chromeos.py  build_tc.py  build_tool.py  buildbot_test_llvm.py  buildbot_test_toolchains.py  check_portable_toolchains.py  chromiumos_image_diff.py  command_executer_timeout_test.py  compare_benchmarks.py  crate_ebuild_help.py  cros_login.py  file_lock_machine.py  file_lock_machine_test.py  generate-waterfall-reports.py  get_common_image_version.py  heat_map.py  heatmap_generator.py  heatmap_generator_test.py  image_chromeos.py  lock_machine.py  lock_machine_test.py  (+26 more)
.git5_specs/: H7c3295650ff892250c9c8f5086e5f120
afdo_metadata/: README.md  chrome_afdo.json  kernel_afdo.json  kernel_arm_afdo.json
afdo_redaction/: redact_profile.py  redact_profile_test.py  remove_cold_functions.py  remove_cold_functions_test.py  remove_indirect_calls.py  remove_indirect_calls_test.py
afdo_tools/: generate_afdo_from_tryjob.py  monitor_chrome_afdo.py  monitor_chrome_afdo_test.py  run_afdo_tryjob.py  update_kernel_afdo  update_kernel_afdo.cfg  update_kernel_afdo.py  update_kernel_afdo_test.py
android_bench_suite/: apply_patches.py  (+2 more)
rust-analyzer-chromiumos-wrapper/: Cargo.toml  README.md
rust-analyzer-chromiumos-wrapper/src/: main.rs
(+949 files in other folders)
