[package]
name = "rust-analyzer-chromiumos-wrapper"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0"
log = { version = "0.4.17" }
serde_json = "1.0"
simplelog = { version = "0.12.0" }
url = "2.5.0"

[features]
default = ["no_debug_log"]
no_debug_log = ["log/max_level_off", "log/release_max_level_off"]
